# UnrealToolkit

./: .gitignore  README.md
.github/workflows/: release.yml  test.yml
src/: Settings.js  global_variables.js  home.js  index.html  logs.html  main.js  settings.html  style.css
src-tauri/: Cargo.toml  license  logging_config.yaml  tauri.conf.json
src-tauri/icons/: Logo.xcf  icon.icns
src-tauri/src/: config.rs  global_variables.rs  globals.rs  main.rs  tauri_commands.rs
