[package]
name = "unreal_toolkit"
version = "1.0.0"
description = "An all-in-one toolkit for unreal engine"
authors = ["Jordon Brooks"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["dialog-all"] }
lazy_static = "1.4.0"
directories = "4.0.1"
shared_child = "1.0.0"
log = "0.4.17"
log4rs = "1.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
